Added catching exception for development and others environment names; Added usage wwwroot files(while only bootstrap); Fixed index.cshtml(missed td tag)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,14 +5,14 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width"/>
-    <link asp-href-include="lib/bootstrap/dist/css/*.min.css" rel="stylesheet"/>
+    <link asp-href-include="lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet"/>
     <title>Result</title>
 </head>
 <body class="p-1">
-    <table class="table table-condensed table-bordered table-striped">
+    <table class="table table-active table-bordered table-striped">
         @foreach (var kvp in Model)
         {
-            <tr><th>@kvp.Key</th><tr>@kvp.Value</tr></tr>
+            <tr><th>@kvp.Key</th><td>@kvp.Value</td></tr>
         }
     </table>
 </body>
